name:              steveroggenkamp
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       True

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.PostDetails
                     Handler.PostNew

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0 -fforce-recomp
    else
        ghc-options:   -Wall -fwarn-tabs -O2 -fforce-recomp

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , aeson                         >= 0.6        && < 0.9
                 , blaze-markup
                 , bytestring                    >= 0.9        && < 0.11
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , conduit                       >= 1.0        && < 2.0
                 , containers
                 , data-default
                 , directory                     >= 1.1        && < 1.3
                 , fast-logger                   >= 2.2        && < 2.5
                 , file-embed
                 , hjsmin                        >= 0.1        && < 0.2
                 , http-conduit                  >= 2.1        && < 2.2
                 , markdown
                 , monad-control                 >= 0.3        && < 1.1
                 , monad-logger                  >= 0.3        && < 0.4
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-postgresql         >= 2.1.1      && < 2.3
                 , persistent-template           >= 2.0        && < 2.3
                 , safe
                 , shakespeare                   >= 2.0        && < 2.1
                 , template-haskell
                 , text                          >= 0.11       && < 2.0
                 , time
                 , unordered-containers
                 , vector
                 , wai-extra                     >= 3.0        && < 3.1
                 , wai-logger                    >= 2.2        && < 2.3
                 , warp                          >= 3.0        && < 3.2
                 , yaml                          >= 0.8        && < 0.9
                 , yesod                         >= 1.4.1.5    && < 1.6
                 , yesod-auth                    >= 1.4.0      && < 1.6
                 , yesod-core                    >= 1.4.6      && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.6
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-text-markdown
--                 , yesod-bin                     >= 1.4.11     && < 1.6

executable         steveroggenkamp
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, steveroggenkamp

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , steveroggenkamp
                 , classy-prelude
                 , classy-prelude-yesod
                 , hspec >= 2.0.0
                 , monad-logger
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , shakespeare
                 , transformers
                 , yesod
                 , yesod-bin
                 , yesod-core
                 , yesod-test >= 1.4.3 && < 1.5
